--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_sign_in: ^5.4.1
+  firebase_core: ^1.20.1
+  bloc: ^8.1.0
+  meta: ^1.7.0
+  flutter_bloc: ^8.1.1
+  firebase_auth: ^3.6.3
 
 dev_dependencies:
   flutter_test:
